test/static/bad/use_pseudo_token.mly
%left A

%start<unit> main

%%

main: A+ {}
