test/static/bad/use_pseudo_token.exp
File "use_pseudo_token.mly", line 7, characters 6-7:
Error: The symbol A has not been declared by %token,
so cannot be used here.
